--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,11 +18,13 @@
     <![endif]-->
   </head>
   <body>
-    <h1 class="text-center">Hello World</h1>
+    <h1 class="text-center">Or Nah</h1>
+    <canvas id="canvas" width="500" height="500"></canvas>
 
     <!-- jQuery -->
     <script src="//code.jquery.com/jquery.js"></script>
     <!-- Bootstrap JavaScript -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
